--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-test
+<!doctype html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <title>YuxingMa</title>
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/waves.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/my.css">
+</head>
+<body>
+<div class="container">
+    <div class="row cvheader">
+        <div class="col-lg-7 col-md-7 col-xs-12">
+            <h1 class="text-primary">Yuxing Ma</h1>
+
+            <p><span class="glyphicon glyphicon-paperclip"></span> Software Developer</p>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-xs-12">
+            <div class="row">
+
+                <div class="col-lg-4 col-md-4 col-xs-4">
+                    <p id="contact" class="address text-center">联系</p>
+                </div>
+
+                <div class="col-lg-8 col-md-8 col-xs-8">
+                    <p id="hahaha"><span class="glyphicon glyphicon-envelope"></span> rhythmdiao@163.com</p>
+
+                    <p><span class="glyphicon glyphicon-earphone"></span> You know</p>
+
+                    <p><span class="glyphicon glyphicon-road"></span> Beijing Xicheng</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-lg-2 col-md-2 col-xs-12">
+            <p class="waves-effect waves-light waves-float">
+                <img data-toggle="tooltip" data-placement="left" id="avatar" title="I'm Yuxing"
+                     class="img-responsive img-rounded shadow"
+                     src="assets/img/avatar.png" alt="Yuxing">
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row cvbody">
+        <div class="col-lg-6 col-md-6 col-xs-12">
+
+            <div class="row">
+                <div class="cbox green waves-effect shadow" id="experience">
+                </div>
+                <div class="cbox red shadow" id="skill">
+                </div>
+                <div class="cbox orange shadow" id="language">
+                    <h4>语言水平</h4>
+
+                    <p>
+                        <canvas id="en" width="150" height="150" class="pull-left"></canvas>
+                        <canvas id="zh" width="150" height="150" class="pull-right"></canvas>
+                    <p class="clearfix"></p>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- 为了清楚的分割两个区域，这里我们添加了一个空白区域，或者也可以在CSS中定义Margin实现//-->
+        <div class="col-lg-1 col-md-1 col-xs-12"></div>
+
+        <div class="col-lg-5 col-md-5 col-xs-12">
+
+            <div class="row">
+                <div class="bbox waves-effect shadow" id="education">
+                </div>
+                <div class="bbox shadow" id="summary">
+                    <h4>工作经验</h4>
+                </div>
+                <div class="bbox shadow" id="addition">
+                    <h4>个人爱好</h4>
+                    <p>
+                        <span class="glyphicon glyphicon-tree-deciduous"></span> 骑马</p>
+                    <p>    <span class="glyphicon glyphicon-plane"></span> 旅游</p>
+
+                    <p><span class="glyphicon glyphicon-cutlery"></span> 美食</p>
+
+                    <p><span class="glyphicon glyphicon-music"></span> 音乐</p>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="footer text-center">关注-微博</div>
+    </div>
+</div>
+
+<script src="assets/js/sea-debug.js"></script>
+<script src="assets/js/config.js"></script>
+<script>
+    seajs.use(['mydata','jquery', 'bootstrap', 'waves', 'chart', 'mustache'], function (mydata) {
+        Waves.displayEffect();
+        mydata.loaddata.chart();
+        mydata.loaddata.experience();
+        mydata.loaddata.education();
+        mydata.loaddata.skill();
+    });
+</script>
+</body>
+</html>
